<resources>
	<string name="argument_product_detail_productId">productId</string>
	<string name="argument_order_detail_orderId">orderId</string>

    <string name="app_name">AndroidAppModel</string>
	<string name="products">Products</string>
	<string name="orders">Orders</string>
	<string name="settings">Settings</string>
	<string name="products_list">Products List</string>
	<string name="product">Product Detail</string>
	<string name="search_products">Search Products</string>
	<string name="search_orders">Search Orders</string>
	<string name="order_detail">Order Detail</string>
	<string name="order_var">Order #%s</string>
</resources>
